# magiconf

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint_and_test.yml  publish.yml
magiconf/: __init__.py  env.py  flags.py  types.py
tests/: test_config.py  test_env.py  test_flags.py  test_load.py
