[tool.poetry]
name = "magiconf"
version = "0.1.0"
description = "A small library to automagically load and parse configuration from either environment, configuration file or command line arguments."
authors = ["Vladimir Kotikov <kotikov.vladimir@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = ">=19.3b0"
flake8 = "^3.7"
mypy = "^0.750.0"
pytest = "^5.3"
pytest-cov = "^2.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
